--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "chart.js": "^2.7.2",
+        "express": "^4.16.3",
+        "ioredis": "^3.2.2",
+        "npm": "^6.1.0",
+        "socket.io": "^2.1.1",
+        "vue-chartjs": "^3.3.1"
     }
 }
