--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "ioredis": "^3.2.2",
         "npm": "^6.1.0",
         "socket.io": "^2.1.1",
+        "socket.io-client": "^2.1.1",
         "vue-chartjs": "^3.3.1"
     }
 }
