--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "chart.js": "^2.7.2",
         "express": "^4.16.3",
         "ioredis": "^3.2.2",
+        "laravel-echo": "^1.4.0",
         "npm": "^6.1.0",
         "socket.io": "^2.1.1",
         "socket.io-client": "^2.1.1",
